# minOgreAR

./: CMakeLists.txt  README.md  TODO  capture.hpp  minimal.cpp  plugins.cfg
